Added ApiGateway + refactored interaction of AuthService and EventService